@@ -1,3 +1,5 @@
+* Add wizard to create purchase requests
+
 Version 2.0.0 - 2011-04-27
 * Bug fixes (see mercurial logs for details)
 
